start writing example

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "examples/onethreadsinglewaveform/submodules/QtAttoDateTime"]
 	path = examples/onethreadsinglewaveform/submodules/QtAttoDateTime
 	url = https://github.com/AlekseyDurachenko/QtAttoDateTime.git
+[submodule "examples/sssppsyncview/submodules/QtAttoDateTime"]
+	path = examples/sssppsyncview/submodules/QtAttoDateTime
+	url = https://github.com/AlekseyDurachenko/QtAttoDateTime.git
